# controller

./: .buildinfo  .clang-tidy  .gitignore  404.html  cubemx.ioc  genindex.html  index.html  objects.inv  platformio.ini  readme-wireshark.html  readme.html  readme.md  search.html  searchindex.js  stm32pio.ini
.github/workflows/: build-test-builddocs.yaml  codeql-analysis.yaml  documentation.yaml  documentation.yml  pio-check.yaml  pio-run.yaml  unit-tests.yaml
Inc/: adxl345.h  device_reboot.h  main.h  sampling.h  stm32f4xx_hal_conf.h  stm32f4xx_it.h  usb_transport.h  usbd_cdc_if.h  usbd_cdc_transport.h  version.h
Inc/fw/: adxl345.h  adxl345_register.h  adxl345_spi_types.h  adxl345_transport_impl.h  adxl345_transport_types.h  controller_impl.h  controller_reboot.h  debug.h  device_reboot.h  host_transport_impl.h  led.h  ringbuffer_impl.h  sampling.h  sampling_impl.h  usbd_cdc_transport.h  version.h
Src/: adxl345.c  device_reboot.c  gpio.c  main.c  sampling.c  spi.c  stm32f4xx_it.c  tim.c  usb_transport.c  usbd_cdc_if.c  usbd_cdc_transport.c  usbd_conf.c  usbd_desc.c  version.c
Src/fw/: adxl345.c  adxl345_transport_impl.c  controller_impl.c  controller_reboot.c  device_reboot.c  host_transport_impl.c  ringbuffer_impl.c  sampling.c  sampling_impl.c  usbd_cdc_transport.c  version.c
_debug/: index.html
_sources/: index.rst.txt
_sources/api/: define_adxl345_8h_1a1a3b84c4d742fe051f12eb8e9d7db58c.rst.txt  define_adxl345_8h_1a593282de5e819f216c6bec6abbdc8c3a.rst.txt  define_adxl345__transport__impl_8h_1acdec8c760a17d588444cd50899420e75.rst.txt  define_controller__impl_8c_1a2da97cdb974bd8ee7a33fe39e255feb1.rst.txt  define_controller__impl_8c_1ab0975b1538786e46b8e4b5fa869e7fcd.rst.txt  define_controller__impl_8c_1ab1832f23d06d7eadbdb5e9370e4454a5.rst.txt  define_controller__impl_8c_1ad8047974c1ca16e65db118ef91ebfc7e.rst.txt  define_debug_8h_1a236cbb0238bec6b69565a156e8c3ad53.rst.txt  define_debug_8h_1a646e5c6a686c1e4cc559a7cc68bc005d.rst.txt  define_debug_8h_1a72ec92f727e507f8ed89b2496451f25b.rst.txt  define_debug_8h_1a7d82fab60f7c4d9259508ddeefe6860f.rst.txt  define_debug_8h_1a80d1d47668a4caa45de6559e1970b397.rst.txt  define_debug_8h_1add553479c72b1bad9cdb870d84a81aa1.rst.txt  define_host__transport_8h_1a52448fbad12ce1c5f682a6bce5141d49.rst.txt  define_host__transport__types_8h_1abc3544aae2ae0f78650ee7c49ed2c83e.rst.txt  define_led_8h_1a948ea3bd7e3719f0a67d06fc396cd260.rst.txt  define_led_8h_1ab9762c7920a3a458f5281a9c8513e9b8.rst.txt  define_led_8h_1afbf9ff806df4edcc06b11991c7353cfc.rst.txt  define_ringbuffer_8c_1a663b743fea1cb34428f6ac8c9654c6db.rst.txt  define_ringbuffer__impl_8h_1a018e3f6206f28db535e27ce850a65cb3.rst.txt  define_ringbuffer__impl_8h_1a1973b18f985517b2dd4328bb7ad4ab62.rst.txt  define_ringbuffer__impl_8h_1a466d94c34710afcd889fc18809cf96c0.rst.txt  define_ringbuffer__impl_8h_1a7b169c21c38fba69b8b43ef5d9ca47bb.rst.txt  define_ringbuffer__impl_8h_1ab678e1a5f5ebc9c4d79a2115a2bca497.rst.txt  define_sampling_8c_1a63c58a64fb866821ab651da9c5c3bea1.rst.txt  define_sampling_8c_1ab0975b1538786e46b8e4b5fa869e7fcd.rst.txt  define_sampling_8c_1ad8047974c1ca16e65db118ef91ebfc7e.rst.txt  define_sampling__types_8h_1a6f7f6b56470de805df7b77526191beba.rst.txt  define_test_8c_1a1c97847f645d2639ee866c7565da562d.rst.txt  (+691 more)
api/: define_adxl345_8h_1a1a3b84c4d742fe051f12eb8e9d7db58c.html  define_adxl345_8h_1a593282de5e819f216c6bec6abbdc8c3a.html  define_adxl345__transport__impl_8h_1acdec8c760a17d588444cd50899420e75.html  define_controller__impl_8c_1a2da97cdb974bd8ee7a33fe39e255feb1.html  define_controller__impl_8c_1ab0975b1538786e46b8e4b5fa869e7fcd.html  define_controller__impl_8c_1ab1832f23d06d7eadbdb5e9370e4454a5.html  define_controller__impl_8c_1ad8047974c1ca16e65db118ef91ebfc7e.html  define_debug_8h_1a236cbb0238bec6b69565a156e8c3ad53.html  define_debug_8h_1a646e5c6a686c1e4cc559a7cc68bc005d.html  define_debug_8h_1a72ec92f727e507f8ed89b2496451f25b.html  define_debug_8h_1a7d82fab60f7c4d9259508ddeefe6860f.html  define_debug_8h_1a80d1d47668a4caa45de6559e1970b397.html  define_debug_8h_1add553479c72b1bad9cdb870d84a81aa1.html  define_host__transport_8h_1a52448fbad12ce1c5f682a6bce5141d49.html  define_host__transport__types_8h_1abc3544aae2ae0f78650ee7c49ed2c83e.html  define_led_8h_1a948ea3bd7e3719f0a67d06fc396cd260.html  define_led_8h_1ab9762c7920a3a458f5281a9c8513e9b8.html  define_led_8h_1afbf9ff806df4edcc06b11991c7353cfc.html  define_ringbuffer_8c_1a663b743fea1cb34428f6ac8c9654c6db.html  define_ringbuffer__impl_8h_1a018e3f6206f28db535e27ce850a65cb3.html  define_ringbuffer__impl_8h_1a1973b18f985517b2dd4328bb7ad4ab62.html  define_ringbuffer__impl_8h_1a466d94c34710afcd889fc18809cf96c0.html  define_ringbuffer__impl_8h_1a7b169c21c38fba69b8b43ef5d9ca47bb.html  define_ringbuffer__impl_8h_1ab678e1a5f5ebc9c4d79a2115a2bca497.html  define_sampling_8c_1a63c58a64fb866821ab651da9c5c3bea1.html  define_sampling_8c_1ab0975b1538786e46b8e4b5fa869e7fcd.html  define_sampling_8c_1ad8047974c1ca16e65db118ef91ebfc7e.html  define_sampling__types_8h_1a6f7f6b56470de805df7b77526191beba.html  define_test_8c_1a1c97847f645d2639ee866c7565da562d.html  define_test_8c_1a2f3ded3810aad4f1117ac7aac095feda.html  define_test_8c_1a31e7ef6ab3db961f1691a459e3c9718a.html  define_to__host__transport_8h_1a88f66998421f186a13c59a27c011e76f.html  define_unity__config_8h_1a1ef6780dec5ea37eea810e22e1a4c632.html  define_usbd__cdc__transport__types_8h_1ada472956f173a3e844133ac4359267c5.html  define_version_8h_1a1a53b724b6de666faa8a9e0d06d1055f.html  define_version_8h_1a1c6d5de492ac61ad29aec7aa9a436bbf.html  define_version_8h_1a901edadf17488bb6be1ac9a1e3cfea7a.html  define_version_8h_1ae0cb52afb79b185b1bf82c7e235f682b.html  dir__home_runner_work_controller_controller_Inc.html  dir__home_runner_work_controller_controller_Inc_fw.html  (+681 more)
docs/: pyproject.toml
docs/sphinx/: .gitignore  Makefile  conf.py  doxygen-project.conf
docs/sphinx/3dpaxxel/: include  src
test/: unity_config.h
utils/: pyproject.toml
utils/3dpaxxel/: version.py
utils/docs/: Makefile  conf.py  docutils.conf  doxygen-project.conf  index.rst  readme-wireshark.md
(+38 files in other folders)
